--- a/test/fixture_project/Gemfile
+++ b/test/fixture_project/Gemfile
@@ -11,6 +11,6 @@ gem "zzz", "<1.5.0"
 gem "aaa", ">=0", :group => [:development, :test]
 gem "bbb", ">=2.2.0", :group => [:development, :test]
 gem "ccc", ">=0", :group => [:development, :test]
-gem "hoe", ">=2.9.1", :group => [:development, :test]
+gem "hoe", "~>2.12", :group => [:development, :test]
 
 # vim: syntax=ruby
