--- a/test/fixture_project/Gemfile
+++ b/test/fixture_project/Gemfile
@@ -8,9 +8,10 @@ gem "xxx", ">=0"
 gem "yyy", ">=0"
 gem "zzz", "<1.5.0"
 
+gem "rdoc", "~>4.0", :group => [:development, :test]
 gem "aaa", ">=0", :group => [:development, :test]
 gem "bbb", ">=2.2.0", :group => [:development, :test]
 gem "ccc", ">=0", :group => [:development, :test]
-gem "hoe", "~>2.12", :group => [:development, :test]
+gem "hoe", "~>3.15", :group => [:development, :test]
 
 # vim: syntax=ruby
